# smooshedmorse

./: .pre-commit-config.yaml  Cargo.toml  README.md  consegna
src/: decode.rs  encode.rs  extra1.rs  extra2.rs  extra3.rs  extra4.rs  extra5.rs  input.rs  lib.rs  main.rs  merses.rs  morses.rs  permutations.rs  wordlist.rs
tests/: decode.rs  encode.rs  permutations.rs  sm2.rs  wordlist
