[package]
name = "smooshedmorse"
version = "0.1.0"
authors = ["Sandro Pratesi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
itertools = "0.10"
rand = "0.8"
color-eyre = "0.5.11"
thiserror = "1.0.26"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
clap = "2.33.3"
